# inspect-market-collusion-framework

./: README.md  assumptions_and_intro.md  inspect-eval-to-run.md  main_solver_simplified.md  simulation_mark1.py  tools.md  types_and_config.md
market-collusion-eval/: main.py  pyproject.toml
market-collusion-eval/src/: monitor.py  run.py  task.py
market-collusion-eval/src/config/: minimal_collusion.json  types.py
market-collusion-eval/src/config/loader/: __init__.py
market-collusion-eval/src/market_collusion_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
market-collusion-eval/src/tools/: coalition.py  fund_transfer.py  market_info.py  messaging.py  punishment.py  trading.py
